--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ colors:
 font_serif: true                        # Font type for page content: serif (default) or slightly smaller sans-serif
 rounded_corners: true                   # Enable (default) rounded corners on boxes and buttons
 logo: /assets/theme/images/petri-dish_1f9eb.png # Logo in navbar, will be displayed with 30px height
+remote_theme: peterdesmet/petridish@2.0
 
 # BUILD SETTINGS
 markdown: kramdown
