--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ baseurl: ""                   # Only required if your site is in a directory e.g
 social:
   email: sjoonkwon@skku.edu
   twitter: 
-  github:                # Can also be a github_username/repository
+  github: "https://github.com/SPMDL25312/CoMa"             # Can also be a github_username/repository
   mastodon: 
   facebook: 
 
@@ -19,14 +19,14 @@ social:
 posts_on_home: 3                        # Show x number of latest posts on homepage, can be 0
 tweets_on_home: false                    # Show Twitter feed of social.twitter on homepage
 archive_permalink: /blog/               # Permalink of page using the archive.html layout, required when using post tags
-github_edit: true                       # Show an "edit this page" link in the footer
+github_edit: false                       # Show an "edit this page" link in the footer
 colors:
   links: "#007bff"                      # Color for links: use a readable color that contrasts well with dark text
   banner: "#007bff"                     # Background color for page banners: use color that contrasts well with white
   footer: "#6c757d"                     # Background color for footer: use color that contrasts well with white
 font_serif: true                        # Font type for page content: serif (default) or slightly smaller sans-serif
 rounded_corners: true                   # Enable (default) rounded corners on boxes and buttons
-logo: /assets/theme/images/petri-dish_1f9eb.png # Logo in navbar, will be displayed with 30px height
+logo: /assets/theme/images/round1.png # Logo in navbar, will be displayed with 30px height
 remote_theme: peterdesmet/petridish@2.0
 
 # BUILD SETTINGS
