--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,8 +5,12 @@
 - text: Research
   href: /research/ # Hardcoded URL
   menu: # Dropdown menu (one level deep only)
-- text: Team
-  href: true # Automatically add URL of (first) page called "Team"
+- text: Members
+  menu: # Dropdown menu (one level deep only)
+  - text: Professor
+    href: true
+  - text: Students
+    href: true # Automatically add URL of (first) page called "Team"
 - text: Publish
   href: /publish/ # Hardcoded URL
 #- text: Documentation
